# python-inotify-watcher

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  README.md  codecov.yml  example.py  inotify_watcher.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ghactions-autoupdate.yml  inotify_watcher.yml  publish-to-pypi.yml  python-inotify-watcher.yml
docs/: Makefile  api.rst  conf.py  index.rst  inotify_watcher.rst  modules.rst
inotify_watcher/: __init__.py
tests/: __init__.py  conftest.py  inotify_test.py  inotify_watcher_test.py
tools/: build_all.sh  create_venv.sh  debug_helpers.py  inotify_events.py
