[metadata]
name = inotify_watcher
version = attr: inotify_watcher.__version__
url = https://github.com/jmlemetayer/inotify_watcher
author = Jean-Marie Lemetayer
author_email = jeanmarie.lemetayer@gmail.com
license = MIT
license_files = LICENSE.md
description = An easy to use inotify watcher wrapper
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown

[options]
py_modules =
	inotify_watcher
python_requires = >= 3.5
setup_requires =
	setuptools >= 46.4.0
	sphinx >= 4.5
	sphinx-rtd-theme >= 1.0
install_requires =
	inotify-simple >= 1.3

[flake8]
max-line-length = 88
extend-ignore = E203
