[metadata]
name = inotify_watcher
version = attr: inotify_watcher.__version__
description = An easy to use inotify watcher wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmlemetayer/inotify_watcher
author = Jean-Marie Lemetayer
author_email = jeanmarie.lemetayer@gmail.com
license = MIT
license_file = LICENSE.md
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules =
    inotify_watcher
install_requires =
    inotify-simple>=1.3
python_requires = >=3.8
setup_requires =
    setuptools>=46.4.0
    sphinx>=4.5
    sphinx-rtd-theme>=1.0

[options.extras_require]
tests =
    pytest>=7.1

[flake8]
max-line-length = 88
extend-ignore = E203
