[metadata]
name = inotify_watcher
version = attr: inotify_watcher.__version__
description = An easy to use inotify watcher wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmlemetayer/python-inotify-watcher
author = Jean-Marie Lemetayer
author_email = jeanmarie.lemetayer@gmail.com
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://python-inotify-watcher.readthedocs.io
    Issues = https://github.com/jmlemetayer/python-inotify-watcher/issues

[options]
packages =
    inotify_watcher
install_requires =
    inotify-simple>=1.3
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools>=46.4

[options.extras_require]
development =
    pre-commit>=2.19
documentation =
    sphinx>=4.5
    sphinx-rtd-theme>=1.0
tests =
    pytest>=7.1
    pytest-cov>=3.0

[options.package_data]
debug_this = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203
